# vlog

./: .coverage  .dockerignore  .env.example  .gitignore  .pa11yci  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.worker  Dockerfile.worker-cpu-only  Dockerfile.worker.gpu  LICENSE  README.md  SECURITY.md  TESTING.md  WORKER_METADATA_VALIDATION.md  alembic.ini  code_version.py  config.py  docker-compose.gpu.yaml  docker-compose.worker.yaml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start-admin.sh  start-public.sh  start-transcription.sh  start-worker.sh  start.sh  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: accessibility.yml  docker-build.yml  security-scan.yml  tests.yml
api/: __init__.py  admin.py  analytics_cache.py  audit.py  chapter_detection.py  common.py  database.py  db_retry.py  enums.py  errors.py  exception_utils.py  job_queue.py  job_state.py  metrics.py  pagination.py  partition_manager.py  public.py  pubsub.py  redis_client.py  schemas.py  settings_service.py  webhook_service.py  worker_api.py  worker_auth.py  worker_schemas.py
cli/: __init__.py  main.py  vlog
docs/: ADMIN_UI_GUIDE.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  DATABASE.md  DEPLOYMENT.md  EXCEPTION_HANDLING.md  ISSUE_478_STREAMING_UPLOAD_PROGRESS.md  MONITORING.md  TRANSCODING_ARCHITECTURE.md  TROUBLESHOOTING.md  UPGRADING.md
grafana/: vlog-dashboard.json
k8s/: README.md  backup-cronjob.yaml  cleanup-cronjob.yaml  configmap.yaml  namespace.yaml  networkpolicy.yaml  secret.yaml  vlog-worker-intel.yaml  worker-deployment-intel.yaml  worker-deployment-nvidia.yaml  worker-deployment.yaml  worker-hpa.yaml  worker-pdb-intel.yaml  worker-pdb-nvidia.yaml  worker-pdb.yaml
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_session_token_unique_constraint.py  003_add_workers_table.py  004_add_missing_indexes.py  005_add_workers_current_job_fk.py  006_add_processed_by_worker.py  007_add_tags_tables.py  008_add_thumbnail_metadata.py  009_add_admin_sessions_table.py  010_add_claim_search_index.py  011_add_check_constraints.py  012_add_settings_table.py  013_add_streaming_format_columns.py  014_add_reencode_queue.py  015_extend_video_qualities.py  016_add_custom_fields.py  017_fix_quality_progress_status_constraint.py  018_add_retranscode_metadata.py  019_add_deployment_events.py  (+8 more)
security_tests/: test_worker_auth_security.py
systemd/: vlog-admin.service  vlog-admin.service.template  vlog-public.service  vlog-public.service.template  vlog-redis.env.example  vlog-redis.service.template  vlog-transcription.service  vlog-transcription.service.template  vlog-worker-api.service  vlog-worker-api.service.template  vlog-worker.service  vlog-worker.service.template  vlog.target
test_env/: pyvenv.cfg
tests/: _disable_db.py  conftest.py  test_admin_api.py  test_admin_list_categories.py  test_alerts.py  test_analytics_cache.py  test_analytics_caching_integration.py  test_audit.py  test_cdn.py  test_chapter_detection.py  test_check_constraints.py  test_cleanup_partial_output.py  test_cleanup_source_file.py  test_cli.py  test_config.py  test_database_compatibility.py  test_db_retry.py  test_downloads.py  test_e2e_upload.py  test_env_example.py  test_error_truncation.py  test_exception_handling.py  test_hls_serving.py  test_http_client.py  test_hwaccel.py  test_job_queue.py  test_job_state.py  test_metrics.py  test_migrations.py  test_pagination.py  test_parameter_enums.py  test_partition_manager.py  test_public_api.py  test_pubsub.py  test_redis_client.py  test_reliability_fixes.py  test_remote_transcoder.py  test_request_id.py  test_schemas.py  test_search_filters.py  (+18 more)
web/: input.css
worker/: __init__.py  alerts.py  command_listener.py  health_check.py  health_server.py  http_client.py  hwaccel.py  reencode_worker.py  remote_transcoder.py  segment_watcher.py  sprite_generator.py  streaming_upload.py  transcoder.py  transcription.py
(+86 files in other folders)
