[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlog"
version = "0.1.0"
description = "Self-hosted video platform with 4K support and HLS streaming"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "asyncpg>=0.29.0",
    "databases[postgresql]>=0.8.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-slugify>=8.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
    "faster-whisper>=1.0.0",
    "watchdog>=3.0.0",
    "slowapi>=0.1.9",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
production = [
    "redis>=4.0.0",  # Required for rate limiting across multiple instances
]

[project.scripts]
vlog = "cli.main:main"

[tool.setuptools.packages.find]
include = ["api", "worker", "cli"]
where = ["."]

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by formatter)
